# aurora-dsql-python-connector

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/: dependabot.yml
.github/workflows/: gitleaks-scan.yml  pre-commit.yml  publish-pypi.yml  python-connector-code-check.yml  python-connector-integration-tests.yml
examples/asyncpg/: README.md  pyproject.toml
examples/asyncpg/src/: example.py  example_preferred.py  example_with_connection_pool.py
examples/asyncpg/src/alternatives/: README.md
examples/asyncpg/src/alternatives/no_connection_pool/: example_with_no_connection_pool.py
examples/asyncpg/src/alternatives/pool/: example_with_nonconcurrent_connection_pool.py
examples/asyncpg/test/: test_example.py  test_example_preferred.py  test_example_with_pool.py  test_example_with_pool_concurrent.py
examples/asyncpg/test/alternatives/no_connection_pool/: test_example_with_no_connection_pool.py
examples/asyncpg/test/alternatives/pool/: test_example_with_nonconcurrent_connection_pool.py
examples/psycopg/: README.md  pyproject.toml
examples/psycopg/src/: example.py  example_async.py  example_preferred.py  example_with_connection_pool.py  example_with_connection_pool_async.py  example_with_connection_pool_concurrent.py
examples/psycopg/src/alternatives/: README.md
examples/psycopg/src/alternatives/no_connection_pool/: example_async_with_no_connection_pool.py  example_with_no_connection_pool.py
examples/psycopg/src/alternatives/pool/: example_with_async_connection_pool.py  example_with_nonconcurrent_connection_pool.py
examples/psycopg/test/: test_example_async.py  test_example_preferred.py  test_example_with_pool.py  test_example_with_pool_async.py
examples/psycopg/test/alternatives/no_connection_pool/: test_example_async_with_no_connection_pool.py  test_example_with_no_connection_pool.py
examples/psycopg/test/alternatives/pool/: test_example_with_async_connection_pool.py  test_example_with_nonconcurrent_connection_pool.py
examples/psycopg2/: README.md  pyproject.toml
examples/psycopg2/src/: example.py  example_preferred.py  example_with_connection_pool.py  example_with_connection_pool_concurrent.py
examples/psycopg2/src/alternatives/: README.md
examples/psycopg2/src/alternatives/no_connection_pool/: example_with_no_connection_pool.py
examples/psycopg2/src/alternatives/pool/: example_with_nonconcurrent_connection_pool.py
examples/psycopg2/test/: test_example.py  test_example_preferred.py  test_example_with_pool_concurrent.py
examples/psycopg2/test/alternatives/no_connection_pool/: test_example_with_no_connection_pool.py
examples/psycopg2/test/alternatives/pool/: test_example_with_nonconcurrent_connection_pool.py
src/aurora_dsql_asyncpg/: __init__.py  connector.py  pool.py
src/aurora_dsql_psycopg/: __init__.py  connection_class.py
src/aurora_dsql_psycopg2/: __init__.py  connector.py  pool.py
src/dsql_core/: connection_properties.py  connection_utils.py  token_manager.py
tests/integration/: common_integration_test_definitions.py  conftest.py  test_integration_asyncpg.py  test_integration_asyncpg_pool.py  test_integration_psycopg.py  test_integration_psycopg2.py  test_integration_psycopg_async.py  test_integration_psycopg_common.py  test_integration_psycopg_pool.py
tests/unit/: test_connection_properties.py  test_psycopg_pool.py  test_token_manager.py
