[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aurora-dsql-python-connector"
dynamic = ["version"]
description = "A connector that integrates IAM Authentication for connecting Python applications to Amazon Aurora DSQL clusters"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Amazon Web Services", email = "aws-aurora-dsql-feedback@amazon.com"}
]
requires-python = ">=3.10"

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "boto3>=1.35.74",
]

[project.optional-dependencies]
psycopg = [
   "psycopg[binary]>=3.1.0",
   "psycopg-pool>=3.2.6",
]

psycopg2 = [
   "psycopg2-binary>=2.9.0",
]

asyncpg = [
   "asyncpg>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=7.0.0",
    "hatch-vcs",
    "pre-commit",
]
psycopg = [
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.2.6",
]
psycopg2 = [
    "psycopg2-binary>=2.9.0",
]
asyncpg = [
    "asyncpg>=0.30.0",
]

[tool.uv]
default-groups = ["dev", "psycopg", "psycopg2", "asyncpg"]

[project.urls]
Homepage = "https://github.com/awslabs/aurora-dsql-python-connector"
Repository = "https://github.com/awslabs/aurora-dsql-python-connector"
Documentation = "https://github.com/awslabs/aurora-dsql-python-connector"
"Bug Tracker" = "https://github.com/awslabs/aurora-dsql-python-connector/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dsql_core/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aurora_dsql_asyncpg", "src/aurora_dsql_psycopg", "src/aurora_dsql_psycopg2", "src/dsql_core"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
extend_skip = ["_version.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
